[package]
name = "axum_vanilla_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "tls-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.10", features = ["fs", "cors"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9"
oauth2 = "5"
base64 = "0.22"
dotenvy = "0.15.7"
